# soketi.rs

./: .dockerignore  .env.example  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  DOCKER_HUB_README.md  README.en.md  README.md  config.json  docker-compose.example.yml  fix_docs_links.py
.github/: COMMIT_CONVENTION.md  CONTRIBUTING.md  CRATES_SETUP.md  DOCKER_SETUP.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_SETUP.md  REPOSITORY_SETTINGS.md  SECURITY.md  VERSIONING.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  (+1 more)
deployment/: CONFIGURATION.md  README.md
docs/: HOME.md  README.md  _Sidebar.md  index.html
examples/: dynamodb_app_manager_example.rs  lambda_webhook_example.rs  mysql_app_manager_example.rs  postgres_app_manager_example.rs  test_cache.rs  test_redis_cache.rs  validation_example.rs  webhook_sender_example.rs
src/: app.rs  auth.rs  config.rs  error.rs  lib.rs  log.rs  main.rs  namespace.rs  options.rs  server.rs  state.rs  validation.rs  webhook_sender.rs  ws.rs  ws_handler.rs
tests/: README.md  app_manager_test.rs  auth_only_test.rs  auth_test.rs  build-optimization.test.ts  cache_manager_test.rs  cache_trait_definition_test.rs  channel-type-support.test.ts  cluster_adapter_test.rs  code-examples.test.ts  connection-status-management.test.ts  core_types_test.rs  documentation-structure.test.ts  dynamodb_app_manager_test.rs  encrypted_channel_manager_test.rs  error_handling_test.rs  glossary-terminology.test.ts  language-consistency.test.ts  local_adapter_test.rs  metrics_trait_definition_test.rs  mysql_app_manager_test.rs  mysql_compile_test.rs  nats_adapter_basic_test.rs  nats_adapter_test.rs  options_test.rs  performance_test.rs  postgres_app_manager_test.rs  presence_channel_manager_test.rs  private_channel_manager_test.rs  public_channel_manager_test.rs  pusher-trigger-endpoint.test.ts  readme.test.ts  redis_adapter_basic_test.rs  redis_queue_manager_test.rs  reverse-proxy-config.test.ts  server_shutdown_test.rs  server_startup_test.rs  sqs_queue_manager_test.rs  sync_queue_manager_test.rs  test_helpers.rs  (+10 more)
(+103 files in other folders)
