[package]
name = "soketi-rs"
version = "1.0.0"
edition = "2024"
authors = ["Ferdi ÜNAL <ferdi@ferdiunal.com>"]
readme = "README.md"
homepage = "https://github.com/ferdiunal/soketi.rs"
repository = "https://github.com/ferdiunal/soketi.rs"
license = "GPL-3.0"
exclude = [
    ".github/*",
    "deployment/*",
    "docs/*",
    "tests/*",
    "examples/*",
    "art/*",
    ".gitignore",
    ".dockerignore"
]
description = "High-performance, Pusher-compatible WebSocket server written in Rust with support for public, private, and presence channels"
documentation = "https://github.com/ferdiunal/soketi-rs/tree/main/docs"
keywords = ["websocket", "pusher", "realtime", "server", "soketi"]
categories = ["network-programming", "web-programming", "asynchronous"]

[dependencies]
async-nats = "0.46.0"
async-trait = "0.1.89"
aws-config = "1.8.12"
aws-sdk-dynamodb = "1.103.0"
aws-sdk-lambda = "1.92.0"
aws-sdk-sqs = "1.92.0"
axum = { version = "0.8.8", features = ["ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
md5 = "0.7.0"
prometheus = "0.13.4"
redis = { version = "1.0.2", features = ["tokio-comp"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
toml = "0.8"
envy = "0.4"
sha2 = "0.10.9"
thiserror = "2.0.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite"] }
sysinfo = "0.33"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[lib]
name = "soketi_rs"
path = "src/lib.rs"

[dev-dependencies]
wiremock = "0.6"
tower = "0.5"
chrono = "0.4"
tempfile = "3.8"
tokio-tungstenite = "0.24"

[[bin]]
name = "soketi-rs"
path = "src/main.rs"
